tests/fail/snapshot_outlive_transaction.stderr
error[E0597]: `txn` does not live long enough
 --> tests/fail/snapshot_outlive_transaction.rs:8:9
  |
6 |     let _snapshot = {
  |         --------- borrow later stored here
7 |         let txn = db.transaction();
  |             --- binding `txn` declared here
8 |         txn.snapshot()
  |         ^^^^^^^^^^^^^^ borrowed value does not live long enough
9 |     };
  |     - `txn` dropped here while still borrowed
